# nphysics_model_explorer

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  Cargo.toml  README.md
amethyst-model-explorer/: Cargo.toml
amethyst-model-explorer/resources/: display_config.ron
amethyst-model-explorer/src/: lib.rs
amethyst-model-explorer/src/component/: collider.rs  mod.rs
amethyst-model-explorer/src/resource/: mod.rs  physics.rs  reload_model.rs
amethyst-model-explorer/src/state/: construct_world.rs  load_model.rs  mod.rs  run_sim.rs  run_sim_state.rs
amethyst-model-explorer/src/system/: physics.rs
examples/: parse_bad_xml.rs  parse_empty_model.rs
examples/models/: many_static_spheres.xml  static_capsules.xml  static_cylinders.xml  static_sphere.xml
mjcf-parser/: .gitignore  Cargo.toml  README.md
mjcf-parser/examples/models/: debug_cylinders.xml  empty_world.xml  sphere_axes.xml  static_boxes.xml  static_capsule_cube.xml  static_cylinder_cube.xml  static_planes.xml
mjcf-parser/src/: lib.rs  log.rs
mjcf-parser/src/attributes/: mod.rs  orientations.rs  real_vector_attribute.rs
mjcf-parser/src/tags/: geom.rs
model-explorer/: Cargo.toml
model-explorer/src/: lib.rs  main.rs
model-explorer/src/asset/: trimesh.rs
model-explorer/src/component/: arc_ball_camera.rs  fps_camera.rs  mod.rs
model-explorer/src/resource/: mod.rs  mouse_drag.rs
model-explorer/src/state/: construct_world.rs
model-explorer/src/system/: arc_ball_camera.rs  fps_camera.rs  mod.rs  mouse_drag.rs  physics.rs
nphysics_testbed3d/: .gitignore
nphysics_testbed3d/src/: engine.rs
nphysics_testbed3d/src/objects/: box_node.rs  heightfield.rs
nphysics_user_data/: Cargo.toml
src/: error.rs  lib.rs  mjcf_model.rs  testbed.rs
src/attributes/: orientations.rs
src/objects/: capsule.rs
src/tags/: geom.rs
