[package]
name = "mjcf-parser"
version = "0.1.0"
authors = ["Devin Schwab <digidevin@gmail.com>"]
edition = "2018"

[build-dependencies]
built = "0.3"

[dependencies]
clap = "2.32"
crossbeam = "0.7"
failure = "0.1"
lazy_static = "1.3.0"
nphysics_testbed3d = "0.5"
nalgebra = "0.18"
ncollide3d = "0.19"
nphysics3d = "0.11"
roxmltree = "0.6"
slog = "2"
slog-stdlog = "3"
slog-async = "2"
slog-term = "2"
nphysics_user_data = { path = "../nphysics_user_data" }

[dev-dependencies]
proptest = "0.9"

[features]
default = []
trace = ["slog/max_level_trace", "slog/release_max_level_trace"]
