[package]
name = "model-explorer"
version = "0.1.0"
authors = ["Devin Schwab <digidevin@gmail.com>"]
edition = "2018"

[dependencies]
kiss3d = "*"
nphysics_testbed3d = { path = "../nphysics_testbed3d" }
mjcf-parser = { path = "../mjcf-parser" }
nalgebra = "0.18"
ncollide3d = "0.19"
nphysics3d = "0.11"
structopt = "0.2"
slog = "2"
slog-stdlog = "3"
slog-async = "2"
slog-term = "2"

[features]
default = []
debug = ["slog/max_level_debug", "slog/release_max_level_debug"]
trace = ["slog/max_level_trace", "slog/release_max_level_trace"]
