[package]
name = "model-explorer"
version = "0.1.0"
authors = ["Devin Schwab <digidevin@gmail.com>"]
edition = "2018"

[dependencies]
amethyst = "0.10.0"
itertools = "0.8"
mjcf-parser = { path = "../mjcf-parser" }
nalgebra = "0.18"
ncollide3d = "0.19"
nphysics3d = "0.11"
nphysics_user_data = { path = "../nphysics_user_data" }
sm = {version = "0.7", git = "https://github.com/rustic-games/sm.git"}
structopt = "0.2"
